--- a/index.html
+++ b/index.html
@@ -110,9 +110,8 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="section_title text-center mb-65">
-                        <span>Service Provided</span>
-                        <h3>Build brands campaigns  <br>
-                                & digital projects</h3>
+                        <span>More details</span>
+                        <h3>My academics and achievements</h3>
                     </div>
                 </div>
             </div>
