--- a/about.html
+++ b/about.html
@@ -112,9 +112,8 @@
                             </div>
                         </div>
                         <div class="video_text text-center">
-                            <p>Hi there, I am Milan. I am designer, artist, cat  <br>
-                                lover and I would like to share with you some of <br> 
-                                my ideas.</p>
+                            <p>Hi there, I am Randika. <br> I am a fullstack developer and a passionate gamer who loves tech, <br> let me show you some
+                                of my achievements and interests.</p>
                         </div>
                     </div>
                 </div>
@@ -153,6 +152,35 @@
         </div>
     </div>
     <!--/ about_me  -->
+    <!-- Start Sample Area -->
+    <section class="sample-text-area">
+        <div class="container box_1170">
+            <h3 class="text-heading" style = "font-size: 40px;"><b>My Academics</b></h3>
+            <p class="sample-text">
+                I am software engineering undergrad who is enrolled in following B.Eng for Software Engineering in the University
+                of Westminster where I follow my studies locally at the Informatics Institute of technology.
+                Every avid independent filmmaker has <b>Bold</b> about making that <i>Italic</i> interest documentary,
+                or short
+                film to show off their creative prowess. Many have great ideas and want to “wow”
+                the<sup>Superscript</sup> scene,
+                or video renters with their big project. But once you have the<sub>Subscript</sub> “in the can” (no easy
+                feat), how
+                do you move from a <del>Strike</del> through of master DVDs with the <u>“Underline”</u> marked
+                hand-written title
+                inside a secondhand CD case, to a pile of cardboard boxes full of shiny new, retail-ready DVDs, with UPC
+                barcodes
+                and polywrap sitting on your doorstep? You need to create eye-popping artwork and have your project
+                replicated.
+                Using a reputable full service DVD Replication company like PacificDisc, Inc. to partner with is
+                certainly a
+                helpful option to ensure a professional end result, but to help with your DVD replication project, here
+                are 4 easy
+                steps to follow for good DVD replication results:
+
+            </p>
+        </div>
+    </section>
+    <!-- End Sample Area -->
 
     <div class="counter_area">
         <div class="container">
@@ -160,25 +188,25 @@
                 <div class="col-xl-4 col-md-4">
                     <div class="single_counter text-center">
                         <h3>
-                            <span class="counter" >520 </span><span>+</span>
+                            <span class="counter" >40 </span>
                         </h3>
-                        <p>Total Projects</p>
+                        <p>Top</p>
                     </div>
                 </div>
                 <div class="col-xl-4 col-md-4">
                     <div class="single_counter text-center">
                         <h3>
-                            <span class="counter">244 </span>
+                            <span class="counter">8</span>
                         </h3>
-                        <p>On Going Projects</p>
+                        <p>Projects</p>
                     </div>
                 </div>
                 <div class="col-xl-4 col-md-4">
                     <div class="single_counter text-center">
                         <h3>
-                            <span class="counter">95 </span> <span>%</span>
+                            <span class="counter">79 </span> <span>%</span>
                         </h3>
-                        <p>Job Success</p>
+                        <p>Overall module grade</p>
                     </div>
                 </div>
             </div>
@@ -195,7 +223,7 @@
                                             <div class="quote">
                                                 <img src="img/testmonial/quote.svg" alt="">
                                             </div>
-                                            <p>Donec imperdiet congue orci consequat mattis. Donec rutrum porttitor <br> 
+                                            <p>Donec imperdiet congue orci consequat mattis. Donec rutrum porttitor <br>
                                                     sollicitudin. Pellentesque id dolor tempor sapien feugiat ultrices nec sed neque.  <br>
                                                     Fusce ac mattis nulla. Morbi eget ornare dui. </p>
                                             <div class="testmonial_author">
@@ -212,7 +240,7 @@
                                             <div class="quote">
                                                 <img src="img/testmonial/quote.svg" alt="">
                                             </div>
-                                            <p>Donec imperdiet congue orci consequat mattis. Donec rutrum porttitor <br> 
+                                            <p>Donec imperdiet congue orci consequat mattis. Donec rutrum porttitor <br>
                                                     sollicitudin. Pellentesque id dolor tempor sapien feugiat ultrices nec sed neque.  <br>
                                                     Fusce ac mattis nulla. Morbi eget ornare dui. </p>
                                             <div class="testmonial_author">
@@ -229,7 +257,7 @@
                                             <div class="quote">
                                                 <img src="img/testmonial/quote.svg" alt="">
                                             </div>
-                                            <p>Donec imperdiet congue orci consequat mattis. Donec rutrum porttitor <br> 
+                                            <p>Donec imperdiet congue orci consequat mattis. Donec rutrum porttitor <br>
                                                     sollicitudin. Pellentesque id dolor tempor sapien feugiat ultrices nec sed neque.  <br>
                                                     Fusce ac mattis nulla. Morbi eget ornare dui. </p>
                                             <div class="testmonial_author">
@@ -247,7 +275,7 @@
             </div>
         </div>
         <!-- /testimonial_area  -->
-    
+
     <div class="discuss_projects">
         <div class="container">
             <div class="row">
