--- a/index.html
+++ b/index.html
@@ -171,12 +171,12 @@
                 <div class="col-xl-5 col-md-5">
                     <div class="single_Portfolio">
                         <div class="portfolio_thumb">
-                            <img src="img/portfolio/1.png" alt="">
+                            <img src="img/about/flownetwork.PNG" alt="">
                         </div>
-                        <a href="img/portfolio/1.png" class="popup popup-image"></a>
+                        <a href="img/about/flownetwork.PNG" class="popup popup-image"></a>
                         <div class="portfolio_hover">
                             <div class="title">
-                                    <h3>Product Design</h3>
+                                    <h3>Flow Network Visualization</h3>
                             </div>
                         </div>
                     </div>
@@ -184,12 +184,12 @@
                 <div class="col-xl-7 col-md-7">
                     <div class="single_Portfolio">
                         <div class="portfolio_thumb">
-                            <img src="img/portfolio/2.png" alt="">
+                            <img src="img/about/capture3.png" alt="">
                         </div>
-                        <a href="img/portfolio/2.png" class="popup popup-image"></a>
+                        <a href="img/about/capture3.png" class="popup popup-image"></a>
                         <div class="portfolio_hover">
                             <div class="title">
-                                    <h3>Product Design</h3>
+                                    <h3>Data Visualization and Prediction Portal</h3>
                             </div>
                         </div>
                     </div>
