--- a/services.html
+++ b/services.html
@@ -99,7 +99,7 @@
             <div class="row align-items-center">
                 <div class="col-xl-6">
                     <div class="projects_thumb">
-                        <img src="img/about/projects.png" alt="">
+                        <img src="img/about/capture3.png" alt="">
                     </div>
                 </div>
                 <div class="col-xl-6">
