--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@
                 <div class="col-xl-7 col-md-7">
                     <div class="single_Portfolio">
                         <div class="portfolio_thumb">
-                            <img src="img/about/capture3.PNG" alt="">
+                            <img src="img/about/Capture3.PNG" alt="">
                         </div>
-                        <a href="img/about/capture3.PNG" class="popup popup-image"></a>
+                        <a href="img/about/Capture3.PNG" class="popup popup-image"></a>
                         <div class="portfolio_hover">
                             <div class="title">
                                     <h3>Data Visualization and Prediction Portal</h3>
