--- a/about.html
+++ b/about.html
@@ -48,22 +48,10 @@
                         <div class="col-xl-6 col-lg-7">
                             <div class="main-menu  d-none d-lg-block">
                                 <nav>
-                                    <ul id="navigation">
+                                    <ul id="navigation" style="float:right;">
                                         <li><a class="active" href="index.html">home</a></li>
                                         <li><a href="about.html">About</a></li>
-                                        <li><a href="services.html">Services</a></li>
-                                        <li><a href="#">blog <i class="ti-angle-down"></i></a>
-                                            <ul class="submenu">
-                                                <li><a href="blog.html">blog</a></li>
-                                                <li><a href="single-blog.html">single-blog</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="#">pages <i class="ti-angle-down"></i></a>
-                                            <ul class="submenu">
-                                                 <li><a href="elements.html">elements</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="contact.html">Contact</a></li>
+                                        <li><a href="services.html">Projects</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -71,7 +59,7 @@
                         <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                             <div class="Appointment">
                                 <div class="book_btn d-none d-lg-block">
-                                    <a  href="#">Contact Me</a>
+                                    <a  href="img/about/cv.pdf">Download CV</a>
                                 </div>
                             </div>
                         </div>
@@ -157,25 +145,11 @@
         <div class="container box_1170">
             <h3 class="text-heading" style = "font-size: 40px;"><b>My Academics</b></h3>
             <p class="sample-text">
-                I am software engineering undergrad who is enrolled in following B.Eng for Software Engineering in the University
-                of Westminster where I follow my studies locally at the Informatics Institute of technology.
-                Every avid independent filmmaker has <b>Bold</b> about making that <i>Italic</i> interest documentary,
-                or short
-                film to show off their creative prowess. Many have great ideas and want to “wow”
-                the<sup>Superscript</sup> scene,
-                or video renters with their big project. But once you have the<sub>Subscript</sub> “in the can” (no easy
-                feat), how
-                do you move from a <del>Strike</del> through of master DVDs with the <u>“Underline”</u> marked
-                hand-written title
-                inside a secondhand CD case, to a pile of cardboard boxes full of shiny new, retail-ready DVDs, with UPC
-                barcodes
-                and polywrap sitting on your doorstep? You need to create eye-popping artwork and have your project
-                replicated.
-                Using a reputable full service DVD Replication company like PacificDisc, Inc. to partner with is
-                certainly a
-                helpful option to ensure a professional end result, but to help with your DVD replication project, here
-                are 4 easy
-                steps to follow for good DVD replication results:
+                I am a software engineering undergrad who is enrolled in B.Eng for Software Engineering in the University
+                of Westminster where I follow my studies locally at the Informatics Institute of technology. I have currently completed my first
+                academic and second academic years. In the first academic year I have maintained high standards where the average of all my modules
+                is 79% amounting to a first class, where I am in the top 40 students out of 300+ students at IIT following the Computer Science and Software Engineering
+                courses. Even through my second year I have maintained these high grades and now I'm currently in my placement year.
 
             </p>
         </div>
@@ -298,19 +272,17 @@
                     <div class="col-xl-6 col-md-6">
                         <div class="menu_links">
                             <ul>
-                                <li><a href="#">About</a></li>
-                                <li><a href="#">Services</a></li>
-                                <li><a href="#">Portfolio</a></li>
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="about.html">About</a></li>
+                                <li><a href="services.html">Projects</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-xl-6 col-md-6">
                         <div class="socail_links">
                             <ul>
-                                <li><a href="#"> <i class="fa fa-facebook"></i> </a></li>
-                                <li><a href="#"> <i class="fa fa-twitter"></i> </a></li>
-                                <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>
-                                <li><a href="#"> <i class="fa fa-google-plus"></i> </a></li>
+                                <li><a href="#"> <i class="fa fa-github"></i> </a></li>
+                                <li><a href="#"> <i class="fa fa-linkedin"></i> </a></li>
                             </ul>
                         </div>
                     </div>
