--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
                                         <li><a class="active" href="index.html">home</a></li>
                                         <li><a href="about.html">About</a></li>
                                         <li><a href="services.html">Projects</a></li>
-                                        <li><a href="contact.html">Contact</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -60,7 +59,7 @@
                         <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                             <div class="Appointment">
                                 <div class="book_btn d-none d-lg-block">
-                                    <a  href="#">Download CV</a>
+                                    <a  href="img/about/cv.pdf">Download CV</a>
                                 </div>
                             </div>
                         </div>
@@ -85,7 +84,6 @@
                 <ul>
                     <li><a href="https://github.com/randhi-w"> <i class="fa fa-github fa-2x"></i> </a></li>
                     <li><a href="https://www.linkedin.com/in/randika-weerasinghe-411659170/"> <i class="fa fa-linkedin fa-2x"></i> </a></li>
-                    <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>
                 </ul>
             </div>
             <div class="container">
@@ -267,7 +265,7 @@
                             <img src="img/about/color_grid.png" alt="">
                         </div>
                         <div class="my_Pic">
-                                <img src="img/about/me.jpg" alt="">
+                                <img src="img/about/me2.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -375,9 +373,11 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="project_text text-center">
-                        <h3>Let’s discuss for a project</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod tempor <br> incididunt ut labore et dolore magna aliqua.</p>
-                        <a class="boxed-btn3" href="#">Start Talking</a>
+                        <h3>Interested ?</h3>
+                        <p> See what I have been upto and get some detailed info <br>
+                            on all my projects.
+                        </p>
+                        <a class="boxed-btn3" href="services.html">Projects</a>
                     </div>
                 </div>
             </div>
@@ -388,23 +388,21 @@
     <footer class="footer">
         <div class="footer_top">
             <div class="container">
-                <div class="row align-items-center">
+                <div class="row">
                     <div class="col-xl-6 col-md-6">
                         <div class="menu_links">
                             <ul>
-                                <li><a href="#">About</a></li>
-                                <li><a href="#">Services</a></li>
-                                <li><a href="#">Portfolio</a></li>
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="about.html">About</a></li>
+                                <li><a href="services.html">Projects</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-xl-6 col-md-6">
                         <div class="socail_links">
                             <ul>
-                                <li><a href="#"> <i class="fa fa-facebook"></i> </a></li>
-                                <li><a href="#"> <i class="fa fa-twitter"></i> </a></li>
-                                <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>
-                                <li><a href="#"> <i class="fa fa-google-plus"></i> </a></li>
+                                <li><a href="#"> <i class="fa fa-github"></i> </a></li>
+                                <li><a href="#"> <i class="fa fa-linkedin"></i> </a></li>
                             </ul>
                         </div>
                     </div>
@@ -418,8 +416,8 @@
                     <div class="col-xl-12">
                         <p class="copy_right text-center">
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         </p>
                     </div>
                 </div>
