--- a/services.html
+++ b/services.html
@@ -52,7 +52,6 @@
                                         <li><a class="active" href="index.html">home</a></li>
                                         <li><a href="about.html">About</a></li>
                                         <li><a href="services.html">Projects</a></li>
-                                        <li><a href="contact.html">Contact</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -60,7 +59,7 @@
                         <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                             <div class="Appointment">
                                 <div class="book_btn d-none d-lg-block">
-                                    <a  href="#">Download CV</a>
+                                    <a  href="img/about/cv.pdf">Download CV</a>
                                 </div>
                             </div>
                         </div>
@@ -265,9 +264,9 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="project_text text-center">
-                        <h3>Let’s discuss for a project</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod tempor <br> incididunt ut labore et dolore magna aliqua.</p>
-                        <a class="boxed-btn3" href="#">Start Talking</a>
+                        <h3>Yup, thats some of my work</h3>
+                        <p>Like what you see? Here's my CV</p>
+                        <a class="boxed-btn3" href="/img/about/cv.pdf">Download CV</a>
                     </div>
                 </div>
             </div>
@@ -278,23 +277,21 @@
     <footer class="footer">
         <div class="footer_top">
             <div class="container">
-                <div class="row align-items-center">
+                <div class="row">
                     <div class="col-xl-6 col-md-6">
                         <div class="menu_links">
                             <ul>
-                                <li><a href="#">About</a></li>
-                                <li><a href="#">Services</a></li>
-                                <li><a href="#">Portfolio</a></li>
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="about.html">About</a></li>
+                                <li><a href="services.html">Projects</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-xl-6 col-md-6">
                         <div class="socail_links">
                             <ul>
-                                <li><a href="#"> <i class="fa fa-facebook"></i> </a></li>
-                                <li><a href="#"> <i class="fa fa-twitter"></i> </a></li>
-                                <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>
-                                <li><a href="#"> <i class="fa fa-google-plus"></i> </a></li>
+                                <li><a href="#"> <i class="fa fa-github"></i> </a></li>
+                                <li><a href="#"> <i class="fa fa-linkedin"></i> </a></li>
                             </ul>
                         </div>
                     </div>
@@ -308,8 +305,8 @@
                     <div class="col-xl-12">
                         <p class="copy_right text-center">
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         </p>
                     </div>
                 </div>
