--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                             <img src="img/about/color_grid.png" alt="">
                         </div>
                         <div class="my_Pic">
-                                <img src="img/about/me2.jpg" alt="">
+                                <img src="img/about/mypic.jpg" alt="">
                         </div>
                     </div>
                 </div>
