--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Melan</title>
+    <title>Randika</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -40,8 +40,8 @@
                     <div class="row align-items-center">
                         <div class="col-xl-3 col-lg-2">
                             <div class="logo">
-                                <a href="index.html">
-                                    <img src="img/logo.png" alt="">
+                                <a href="index.html" style="color:white;font-size: 20px;font-weight: bold">
+                                    Randika Weerasinghe
                                 </a>
                             </div>
                         </div>
@@ -93,12 +93,6 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="video_wrap">
-                        <div class="thumb">
-                            <img src="img/video/video_bg.png" alt="">
-                            <div class="video_icon">
-                                <a class="popup-video" href="https://www.youtube.com/watch?v=1Prw90PRiJE"> <i class="fa fa-play"></i> </a>
-                            </div>
-                        </div>
                         <div class="video_text text-center">
                             <p>Hi there, I am Randika. <br> I am a fullstack developer and a passionate gamer who loves tech, <br> let me show you some
                                 of my achievements and interests.</p>
@@ -120,9 +114,10 @@
                 <div class="col-xl-6 col-md-6">
                     <div class="about_e_details">
                         <h3>About me</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida Risus com odo viverra maecenas.</p>
+                        <p>I am an enthusiastic tech whizz, who is motivated to learn new things and make new connections,
+                            who is also flexible to work as a team. I am also passionate about software development and competitive gaming.</p>
                         <div class="download_cv">
-                            <a class="boxed-btn3" href="#">Download CV</a>
+                            <a class="boxed-btn3" href="img/about/cv.pdf">Download CV</a>
                         </div>
                     </div>
                 </div>
