--- a/about.html
+++ b/about.html
@@ -181,78 +181,16 @@
             </div>
         </div>
     </div>
-    <!-- testimonial_area  -->
-    <div class="testimonial_area ">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl-12">
-                        <div class="testmonial_active owl-carousel">
-                            <div class="single_carousel">
-                                    <div class="single_testmonial text-center">
-                                            <div class="quote">
-                                                <img src="img/testmonial/quote.svg" alt="">
-                                            </div>
-                                            <p>Donec imperdiet congue orci consequat mattis. Donec rutrum porttitor <br>
-                                                    sollicitudin. Pellentesque id dolor tempor sapien feugiat ultrices nec sed neque.  <br>
-                                                    Fusce ac mattis nulla. Morbi eget ornare dui. </p>
-                                            <div class="testmonial_author">
-                                                <div class="thumb">
-                                                        <img src="img/testmonial/thumb.png" alt="">
-                                                </div>
-                                                <h3>Robert Thomson</h3>
-                                                <span>Business Owner</span>
-                                            </div>
-                                        </div>
-                            </div>
-                            <div class="single_carousel">
-                                    <div class="single_testmonial text-center">
-                                            <div class="quote">
-                                                <img src="img/testmonial/quote.svg" alt="">
-                                            </div>
-                                            <p>Donec imperdiet congue orci consequat mattis. Donec rutrum porttitor <br>
-                                                    sollicitudin. Pellentesque id dolor tempor sapien feugiat ultrices nec sed neque.  <br>
-                                                    Fusce ac mattis nulla. Morbi eget ornare dui. </p>
-                                            <div class="testmonial_author">
-                                                <div class="thumb">
-                                                        <img src="img/testmonial/thumb.png" alt="">
-                                                </div>
-                                                <h3>Robert Thomson</h3>
-                                                <span>Business Owner</span>
-                                            </div>
-                                        </div>
-                            </div>
-                            <div class="single_carousel">
-                                    <div class="single_testmonial text-center">
-                                            <div class="quote">
-                                                <img src="img/testmonial/quote.svg" alt="">
-                                            </div>
-                                            <p>Donec imperdiet congue orci consequat mattis. Donec rutrum porttitor <br>
-                                                    sollicitudin. Pellentesque id dolor tempor sapien feugiat ultrices nec sed neque.  <br>
-                                                    Fusce ac mattis nulla. Morbi eget ornare dui. </p>
-                                            <div class="testmonial_author">
-                                                <div class="thumb">
-                                                        <img src="img/testmonial/thumb.png" alt="">
-                                                </div>
-                                                <h3>Robert Thomson</h3>
-                                                <span>Business Owner</span>
-                                            </div>
-                                        </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- /testimonial_area  -->
+
 
     <div class="discuss_projects">
         <div class="container">
             <div class="row">
                 <div class="col-xl-12">
                     <div class="project_text text-center">
-                        <h3>Let’s discuss for a project</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod tempor <br> incididunt ut labore et dolore magna aliqua.</p>
-                        <a class="boxed-btn3" href="#">Start Talking</a>
+                        <h3>That's me in a nutshell</h3>
+                        <p>Check my cv down here.</p>
+                        <a class="boxed-btn3" href="img/about/cv.pdf">Download CV</a>
                     </div>
                 </div>
             </div>
